--- a/api/package.json
+++ b/api/package.json
@@ -8,12 +8,14 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@hapi/hapi": "^20.1.3",
     "activedirectory2": "^2.1.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
     "express-validator": "^6.11.1",
+    "hapi": "^18.1.0",
+    "hapi-router": "5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
